--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Upload
+        if: github.ref == 'refs/heads/master'
         uses: appleboy/scp-action@v0.0.5
         with:
           host: bandbox.dreamhost.com
